# Backend-Neogamin-

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml  pom.xml  setup-db.sh
backend/: .env.example  CLAUDE_BACKEND_CONTEXT.md  Dockerfile  README.md  neogaming-postman-collection.json  pom.xml  seed_data.sql  seed_orders_reviews.sql
backend/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
neogaming-ai-service/: .env.example  Dockerfile  pyproject.toml
neogaming-ai-service/src/agents/analytics/: analytics_agent.py  analytics_prompts.py  analytics_tools.py
neogaming-ai-service/src/agents/search/: search_agent.py  search_prompts.py  search_tools.py
neogaming-ai-service/src/agents/seller/: seller_agent.py  seller_prompts.py  seller_tools.py
neogaming-ai-service/src/api/: main.py
neogaming-ai-service/src/api/middleware/: auth_middleware.py  logging_middleware.py
neogaming-ai-service/src/api/routers/: analytics_router.py  search_router.py  seller_router.py
neogaming-ai-service/src/core/: config.py  exceptions.py  llm_json.py  logging.py
neogaming-ai-service/src/models/: analytics_models.py  search_models.py  seller_models.py  shared_models.py
neogaming-ai-service/src/services/: gemini_client.py
neogaming-ai-service/src/services/image_enhancement/: __init__.py  mock_provider.py  nano_banana_provider.py  pillow_provider.py  provider.py
neogaming-ai-service/tests/unit/: test_image_enhancement.py  test_search_agent.py
src/main/resources/: application-dev.yml  application-prod.yml  application.yml
(+340 files in other folders)
