[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neogaming-ai-service"
version = "0.1.0"
description = "NeoGaming AI Microservice — LangGraph agents powered by Gemini & Nano Banana"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-genai>=1.0.0",
    "langchain-groq>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "Pillow>=11.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires real GEMINI_API_KEY"]

[tool.ruff]
line-length = 100
target-version = "py312"
